--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MonkeeApp"
         tools:targetApi="31">
+        <activity
+            android:name=".dung_dang_ky"
+            android:exported="true" />
+        <activity
+            android:name=".dung_dangky_email"
+            android:exported="false" />
+        <activity
+            android:name=".quen_mat_khau"
+            android:exported="true" />
         <activity
             android:name=".Home"
             android:exported="false" />
