--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.MonkeeApp"
         tools:targetApi="31">
         <activity
-            android:name=".Start_1_Activity"
+            android:name=".Dat_AddExpenseActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,6 +45,12 @@
         <activity
             android:name=".quen_mat_khau"
             android:exported="true" />
+        <activity android:name=".Start_1_Activity"
+            android:exported="false" />
+        <activity android:name=".Dat_EditExpenseActivity"
+            android:exported="false" />
+        <activity android:name=".Dat_PieChartActivity"
+            android:exported="false" />
         <activity
             android:name=".Home"
             android:exported="false" />
