--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.MonkeeApp"
         tools:targetApi="31">
         <activity
-            android:name=".Dat_AddExpenseActivity"
+            android:name=".Start_1_Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,7 +45,7 @@
         <activity
             android:name=".quen_mat_khau"
             android:exported="true" />
-        <activity android:name=".Start_1_Activity"
+        <activity android:name=".Dat_AddExpenseActivity"
             android:exported="false" />
         <activity android:name=".Dat_EditExpenseActivity"
             android:exported="false" />
@@ -56,7 +56,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="true" />
     </application>
 
 </manifest>
